# agent-world

./: .gitignore  README.md  latest-authority-manifest.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: world-heartbeat.yml
.well-known/: agent-federation.json
agent_world/: __init__.py  authority_exports.py  cli.py  config.py  federation.py  governance.py  heartbeat.py  legislator.py  protocol.py  registry.py  schema.py
bundles/8a04d18747f51fe55d9c8f2c591ce40bb6cba44c/: source-authority-bundle.json
bundles/8a04d18747f51fe55d9c8f2c591ce40bb6cba44c/.authority-exports/: canonical-surface.json
bundles/c0a5bd1eeb6ec5cea9c131417e13878805bbf20a/: source-authority-bundle.json
bundles/c0a5bd1eeb6ec5cea9c131417e13878805bbf20a/.authority-exports/: canonical-surface.json  public-summary-registry.json  source-surface-registry.json  surface-metadata.json
campaigns/: default.json
config/: world.yaml  world_policies.yaml  world_registry.yaml
data/federation/: nadi_inbox.json  peer.json  receipts.json
docs/: CROSS_REPO_ROADMAP.md  FEDERATION_ROLES.md  MEMO_DEVCONTAINER_FEDERATION.md  REPO_BOUNDARIES.md  WORLD_CONSTITUTION.md
docs/briefs/: 011_federation_roles_sharpened.md
schemas/: city_report.schema.json  federation_directive.schema.json
scripts/: bootstrap.sh  world_heartbeat.py
tests/: test_authority_exports.py  test_governance.py  test_heartbeat.py  test_protocol.py  test_registry.py  test_schema.py
